/* eslint-disable @typescript-eslint/no-explicit-any */
import { render, screen, waitFor } from "@testing-library/react"
import React from "react"
import { beforeEach,describe, expect, it, vi } from "vitest"

import type { LeaderboardDisplayEntry } from "@/lib/types"

import { LeaderboardTable } from "../LeaderBoardTable"

// Mock the external dependencies
vi.mock("@/lib/contracts/hunt", () => ({
  get_hunt_leaderboard: vi.fn(),
}))

vi.mock("@/lib/logger", () => ({
  logger: {
    error: vi.fn(),
  },
}))

vi.mock("@/components/icons/Medal", () => ({
  default: ({ position }: { position: number }) => <div data-testid={`medal-${position}`}>Medal {position}</div>,
}))

vi.mock("@/components/SeasonInfo", () => ({
  SeasonInfo: () => <div data-testid="season-info" />,
}))

vi.mock("@/store/useStore", () => ({
  useWalletStore: vi.fn(() => ({
    walletAddress: "GABC...1234",
  })),
}))

vi.mock("@/lib/notifications/rankTracker", () => ({
  detectRankChanges: vi.fn(() => []),
  getStoredNotifications: vi.fn(() => []),
  saveNotifications: vi.fn(),
  markNotificationRead: vi.fn(),
  markAllNotificationsRead: vi.fn(),
  clearNotifications: vi.fn(),
  getUnreadNotificationCount: vi.fn(() => 0),
}))

vi.mock("@/lib/notifications/notificationService", () => ({
  handleRankNotifications: vi.fn(),
}))

import { get_hunt_leaderboard } from "@/lib/contracts/hunt"
import { useWalletStore } from "@/store/useStore"

describe("LeaderboardTable", () => {
  const mockLeaderboardData = [
    { address: "G123456ABCDEF", name: "Player One", points: 100 },
    { address: "G234567BCDEFG", name: "Player Two", points: 85 },
    { address: "G345678CDEFGH", name: "Player Three", points: 70 },
    { address: "G456789DEFGHI", name: "Player Four", points: 50 },
  ]

  beforeEach(() => {
    vi.clearAllMocks()
    ;(get_hunt_leaderboard as unknown as { mockResolvedValue: (v: unknown) => void }).mockResolvedValue(mockLeaderboardData)
    ;(useWalletStore as ReturnType<typeof vi.fn>).mockImplementation((selector: any) => {
      const state = { walletAddress: "GABC...1234" }
      return selector(state)
    })
  })

  // ─── Render Tests ───────────────────────────────────────────────
  describe("render", () => {
    it("renders loading skeleton when isLoading is true and data is empty", () => {
      render(<LeaderboardTable huntId={1} isLoading={true} />)
      
      // Should show skeleton loaders
      const skeletons = document.querySelectorAll(".animate-pulse")
      expect(skeletons.length).toBeGreaterThan(0)
    })

    it("renders empty state when no data is available", async () => {
      ;(get_hunt_leaderboard as unknown as { mockResolvedValue: (v: unknown) => void }).mockResolvedValueOnce([])
      render(<LeaderboardTable huntId={1} data={[]} isLoading={false} />)
      
      await waitFor(() => {
        expect(screen.getByText(/No results for these filters/)).toBeInTheDocument()
      })
    })

    it("renders table with leaderboard data", async () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "Player One",
          points: 100,
          icon: <div>Medal 1</div>,
        },
        {
          position: 2,
          name: "Player Two",
          points: 85,
          icon: <div>Medal 2</div>,
        },
      ]

      render(<LeaderboardTable huntId={1} data={testData} isLoading={false} />)
      
      expect(screen.getByText("Player One")).toBeInTheDocument()
      expect(screen.getByText("Player Two")).toBeInTheDocument()
      expect(screen.getByText("100")).toBeInTheDocument()
      expect(screen.getByText("85")).toBeInTheDocument()
    })

    it("renders table headers correctly", () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "Player One",
          points: 100,
          icon: <div>Medal 1</div>,
        },
      ]

      render(<LeaderboardTable huntId={1} data={testData} isLoading={false} />)
      
      expect(screen.getByText("Position")).toBeInTheDocument()
      expect(screen.getByText("Display Name / Wallet Address")).toBeInTheDocument()
      expect(screen.getByText("Points Won")).toBeInTheDocument()
    })

    it("truncates wallet address when name is not provided", async () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "G12...EF",
          points: 100,
          icon: <div>Medal 1</div>,
        },
      ]

      render(<LeaderboardTable huntId={1} data={testData} isLoading={false} />)
      
      expect(screen.getByText("G12...EF")).toBeInTheDocument()
    })

    it("displays top 3 players with highlighted styling", () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "First Place",
          points: 100,
          icon: <div>Medal 1</div>,
        },
        {
          position: 2,
          name: "Second Place",
          points: 85,
          icon: <div>Medal 2</div>,
        },
        {
          position: 3,
          name: "Third Place",
          points: 70,
          icon: <div>Medal 3</div>,
        },
        {
          position: 4,
          name: "Fourth Place",
          points: 50,
          icon: <div>Medal 4</div>,
        },
      ]

      const { container } = render(
        <LeaderboardTable huntId={1} data={testData} isLoading={false} />
      )
      
      // Find rows with top 3 styling
      const rows = container.querySelectorAll("tbody tr")
      expect(rows[0].className).toContain("bg-slate-50") // Top 3 styling
      expect(rows[1].className).toContain("bg-slate-50")
      expect(rows[2].className).toContain("bg-slate-50")
      expect(rows[3].className).not.toContain("bg-slate-50")
    })

    it("renders snapshot of table with data", () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "Champion",
          points: 150,
          icon: <div data-testid="medal-1">🥇</div>,
        },
        {
          position: 2,
          name: "Runner Up",
          points: 120,
          icon: <div data-testid="medal-2">🥈</div>,
        },
        {
          position: 3,
          name: "Third",
          points: 100,
          icon: <div data-testid="medal-3">🥉</div>,
        },
      ]

      const { container } = render(
        <LeaderboardTable huntId={1} data={testData} isLoading={false} />
      )
      
      expect(container).toMatchSnapshot()
    })

    it("renders snapshot of empty state", async () => {
      ;(get_hunt_leaderboard as unknown as { mockResolvedValue: (v: unknown) => void }).mockResolvedValueOnce([])
      const { container } = render(
        <LeaderboardTable huntId={1} data={[]} isLoading={false} />
      )
      
      await waitFor(() => {
        expect(screen.getByText(/No results for these filters/)).toBeInTheDocument()
      })
      
      expect(container).toMatchSnapshot()
    })

    it("renders snapshot of loading state", () => {
      const { container } = render(
        <LeaderboardTable huntId={1} isLoading={true} />
      )
      
      expect(container).toMatchSnapshot()
    })
  })

  // ─── Interaction Tests ──────────────────────────────────────────
  describe("interaction", () => {
    it("does not re-render when props remain the same (memo optimization)", () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "Player",
          points: 100,
          icon: <div>Medal 1</div>,
        },
      ]

      const renderSpy = vi.fn()
      const TestWrapper = (props: any) => {
        renderSpy()
        return <LeaderboardTable {...props} />
      }

      const { rerender } = render(
        <TestWrapper huntId={1} data={testData} isLoading={false} />
      )

      expect(renderSpy).toHaveBeenCalledTimes(1)

      // Re-render with the exact same props
      rerender(
        <TestWrapper huntId={1} data={testData} isLoading={false} />
      )

      // The wrapper component will re-render, but LeaderboardTable should not
      // This is verified by the memo wrapper preventing unnecessary renders
      expect(screen.getByText("Player")).toBeInTheDocument()
    })

    it("re-renders when huntId prop changes (memo allows this)", async () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "Player",
          points: 100,
          icon: <div>Medal 1</div>,
        },
      ]

      const { rerender } = render(
        <LeaderboardTable huntId={1} data={testData} isLoading={false} />
      )

      expect(screen.getByText("Player")).toBeInTheDocument()

      // Re-render with different huntId
      rerender(
        <LeaderboardTable huntId={2} data={testData} isLoading={false} />
      )

      // Should still render correctly when props change
      expect(screen.getByText("Player")).toBeInTheDocument()
    })
  })

  // ─── Accessibility Tests ────────────────────────────────────────
  describe("accessibility", () => {
    it("has proper table structure with column headers", () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "Player",
          points: 100,
          icon: <div>Medal 1</div>,
        },
      ]

      render(<LeaderboardTable huntId={1} data={testData} isLoading={false} />)
      
      const headers = screen.getAllByRole("columnheader")
      expect(headers.length).toBeGreaterThan(0)
    })

    it("has accessible row elements for each player", () => {
      const testData: LeaderboardDisplayEntry[] = [
        {
          position: 1,
          name: "Player One",
          points: 100,
          icon: <div>Medal 1</div>,
        },
        {
          position: 2,
          name: "Player Two",
          points: 85,
          icon: <div>Medal 2</div>,
        },
      ]

      render(<LeaderboardTable huntId={1} data={testData} isLoading={false} />)
      
      const rows = screen.getAllByRole("row")
      // Header + 2 data rows
      expect(rows.length).toBe(3)
    })
  })
})
